Merge branch 'master' of https://github.com/VitaliiRubezhanskii/financial-stock-broker-2
# Conflicts:
#	configuration/order-service.yml
#	core/account-service/src/main/resources/bootstrap.yml
#	core/order-service/src/main/resources/bootstrap.yml
#	support/config/src/main/resources/application.yml